Fixed bottom spacing of the last item of the last Basic content component.

--- a/docroot/themes/contrib/civictheme/civictheme_library/components/00-base/mixins/_content.scss
+++ b/docroot/themes/contrib/civictheme/civictheme_library/components/00-base/mixins/_content.scss
@@ -81,9 +81,13 @@
     &:first-child {
       margin-top: 0;
     }
+  }
 
-    &:last-child {
-      margin-bottom: 0;
+  &:last-child {
+    p {
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 
